--- a/css/font.css
+++ b/css/font.css
@@ -5,9 +5,9 @@
     box-sizing: border-box;
 }
 @font-face {
-    font-family: 'Alphabetic';
+    font-family: 'NotoSansKR';
     src: url('../font/transfonter.org-20220818-024230/');
-    src: url('../NotoSansKR-Bold-Alphabetic.eot?#iefix') format('embedded-opentype'),
+    src: url('../font/NotoSansKR-Bold-Alphabetic.eot?#iefix') format('embedded-opentype'),
         url('../font/NotoSansKR-Bold-Alphabetic.woff2') format('woff2'),
         url('../font/NotoSansKR-Bold-Alphabetic.woff') format('woff');
     font-weight: bold;
@@ -17,7 +17,7 @@
 }
 
 @font-face {
-    font-family: 'Alphabetic';
+    font-family: 'NotoSansKR';
     src: url('../font/transfonter.org-20220818-024300/');
     src: url('../font/NotoSansKR-Bold-Alphabetic.eot?#iefix') format('embedded-opentype'),
         url('../font/NotoSansKR-Bold-Alphabetic.woff2') format('woff2'),
@@ -28,7 +28,7 @@
 }
 
 @font-face {
-    font-family: 'Alphabetic';
+    font-family: 'NotoSansKR';
     src: url('../font/NotoSansKR-Light-Alphabetic.eot');
     src: url('../font/NotoSansKR-Light-Alphabetic.eot?#iefix') format('embedded-opentype'),
         url('../font/NotoSansKR-Light-Alphabetic.woff2') format('woff2'),
@@ -41,7 +41,7 @@
 /* ======328 */
 
 @font-face {
-    font-family: 'Alphabetic';
+    font-family: 'NotoSansKR';
     src: url('../font/transfonter.org-20220818-024328/');
     src: url('../font/NotoSansKR-Bold-Alphabetic.eot?#iefix') format('embedded-opentype'),
         url('../font/NotoSansKR-Bold-Alphabetic.woff2') format('woff2'),
@@ -52,7 +52,7 @@
 }
 
 @font-face {
-    font-family: '';
+    font-family: 'NotoSansKR';
     src: url('../font/NotoSansKR-Light-Alphabetic.eot');
     src: url('../font/NotoSansKR-Light-Alphabetic.eot?#iefix') format('embedded-opentype'),
         url('../font/NotoSansKR-Light-Alphabetic.woff2') format('woff2'),
@@ -63,7 +63,7 @@
 }
 
 @font-face {
-    font-family: '';
+    font-family: 'NotoSansKR';
     src: url('../font/NotoSansKR-Thin-Alphabetic.eot');
     src: url('../font/NotoSansKR-Thin-Alphabetic.eot?#iefix') format('embedded-opentype'),
         url('../font/NotoSansKR-Thin-Alphabetic.woff2') format('woff2'),
@@ -87,7 +87,7 @@
 }
 
 @font-face {
-    font-family: '';
+    font-family: 'NotoSansKR';
     src: url('NotoSansKR-Light-Alphabetic.eot');
     src: url('NotoSansKR-Light-Alphabetic.eot?#iefix') format('embedded-opentype'),
         url('NotoSansKR-Light-Alphabetic.woff2') format('woff2'),
@@ -98,7 +98,7 @@
 }
 
 @font-face {
-    font-family: '';
+    font-family: 'NotoSansKR';
     src: url('NotoSansKR-Thin-Alphabetic.eot');
     src: url('NotoSansKR-Thin-Alphabetic.eot?#iefix') format('embedded-opentype'),
         url('NotoSansKR-Thin-Alphabetic.woff2') format('woff2'),
@@ -109,7 +109,7 @@
 }
 
 @font-face {
-    font-family: '';
+    font-family: 'NotoSansKR';
     src: url('NotoSansKR-Medium-Alphabetic.eot');
     src: url('NotoSansKR-Medium-Alphabetic.eot?#iefix') format('embedded-opentype'),
         url('NotoSansKR-Medium-Alphabetic.woff2') format('woff2'),
