--- a/sub/web1/css/index.css
+++ b/sub/web1/css/index.css
@@ -101,40 +101,130 @@ header nav > ul .depth01 .depth02 li {
 /* =====   visual =========================== */
 
 .main_visual {
-   /*  position: absolute;
-    bottom: -595px; */
-    
-    padding: 20px;
-    width: calc(100% - 160px);
-    margin: 0 auto;
+    padding: 80px;
+    width: 1550px;
     height: 555px;
-    margin-top: 40px;
-    margin-bottom: 80px;
-
-
+    margin: 0 auto;
 }
 .main_visual video {
+
     width: 100%;
     height: 100%;
     object-fit: cover;
-
 }
+
+
+/* .main_visal input {
+
+    margin: 0 auto;
+}
+
+.main_visal .slideswap {
+    max-width: 1550px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+.main_visal .slidelist {
+    white-space: nowrap;
+    font-size: 0;
+}
+.main_visal .slidelist > li {
+    display: inline-block;
+    vertical-align: middle;
+    width: 100%;
+    transition:all .4s;
+}
+.main_visal .slidelist > li a {
+    display: block;
+    position: relative;
+}
+.main_visal .slidelist > li a video {
+    width: 100%;
+}
+.main_visal .slidelist label {
+    position: absolute;
+    z-index: 10;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 50px;
+    cursor: pointer;
+}
+.main_visal .slidelist .left {
+    left:5px;
+    background:url('../img/left.png') center center / 30px no-repeat;
+}
+.main_visal .slidelist .right {
+    right:5px;
+    background:url('../img/right.png') center center / 30px no-repeat;
+}
+
+.main_visal [id="slide_01"]:checked ~ .slidewrap .slidelist > li {transform:translateX(0%);}
+.main_visal [id="slide_02"]:checked ~ .slidewrap .slidelist > li {transform:translateX(-100%);}
+.main_visal [id="slide_03"]:checked ~ .slidewrap .slidelist > li {transform:translateX(-200%);} */
+
 
 /* ==========  banner     ====================== */
 
-.banner {
+/* .banner {
     width: calc(100% - 500px);
     margin: 0px auto;
     margin-bottom: 100px;
+} */
+
+.section {
+    margin-bottom: 100px;
+}
+.section input[id*="slide"] {
+    display: none;
+}
+.section .slidewrap {
+    max-width: 1280px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+.section .slidelist {
+    white-space: nowrap;
+    font-size: 0;
+}
+.section .slidelist > li {
+    display: inline-block;
+    vertical-align: middle;
+    width: 100%;
+    transition:all .4s;
+
+}
+.section .slidelist > li > a {
+    display: block;
+    position: relative;
+}
+.section .slidelist > li > a img {
+    width: 100%;
+}
+.section .slidelist label {
+    position: absolute;
+    z-index: 10;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 50px;
+    cursor: pointer;
+}
+.section .slidelist .left {
+    left:5px;
+    background:url('../img/left.png') center center / 30px no-repeat;
+}
+.section .slidelist .right {
+    right:5px;
+    background:url('../img/right.png') center center / 30px no-repeat;
 }
 
-.banner div {
+.section [id="slide01"]:checked ~ .slidewrap .slidelist > li {transform:translateX(0%);}
+.section [id="slide02"]:checked ~ .slidewrap .slidelist > li {transform:translateX(-100%);}
+.section [id="slide03"]:checked ~ .slidewrap .slidelist > li {transform:translateX(-200%);}
 
-}
-.banner div .b_1 {
 
-}
-.banner div .b_1  img {}
+/* .banner div {}
+.banner div .b_1 {}
+.banner div .b_1  img {} */
 
 /* =========== con01 =========================== */
 
@@ -465,6 +555,7 @@ header nav > ul .depth01 .depth02 li {
     width: 1280px;
     position: relative;
     margin: 0 auto;
+    
 
     
 }
@@ -490,7 +581,6 @@ header nav > ul .depth01 .depth02 li {
     justify-content: center;
     flex-wrap: wrap;
     
-
 }
 
 .con2 .last_title > div {
@@ -498,10 +588,19 @@ header nav > ul .depth01 .depth02 li {
     position: relative;
     overflow: hidden;
     margin: 30px 10px 0;
+
+}
+/* ============================================== */
+/* 이미지 크기변환 태그 시작 */
+
+.con2 .last_title > div img {
+    transition: all 0.5s;
+}
+.con2 .last_title > div:hover img {
+    transform: scale(1.5);
 }
 
-
-
+/* =============================================== */
 .con2 .last_title > div ul {
 
     width: 300px;
@@ -700,21 +799,6 @@ background-color: #00434a90;
 
 
 /* =============   con2 end ================= */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /*  footer */
 
